Add-production-ready-RAG-API-endpoints

--- a/ui.html
+++ b/ui.html
@@ -181,7 +181,7 @@
             sourcesCard.textContent = "";
 
             try {
-                const res = await fetch("/rag", {
+                const res = await fetch("/predict", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify({ message: q })
